firebase auth, implementation
