# common/httpUtil.go
@@ -1,0 +1,18 @@
+package common
+
+import "github.com/gin-gonic/gin"
+
+// NewHTTPError example
+func NewHTTPError(ctx *gin.Context, status int, err error) {
+	er := HTTPError{
+		Code:    status,
+		Message: err.Error(),
+	}
+	ctx.JSON(status, er)
+}
+
+// HTTPError example
+type HTTPError struct {
+	Code    int    `json:"code" example:"400"`
+	Message string `json:"message" example:"Request Failure"`
+}
